Fixed extra space issue between description and description above content

--- a/src/component/Accordion/Accordion.style.scss
+++ b/src/component/Accordion/Accordion.style.scss
@@ -8,7 +8,7 @@
     &-Expand {
         display: flex;
         justify-content: center;
-        align-items: center;
+        // align-items: center;
         transform: translateY(6px);
         &_isArabic {
             transform: rotateY(180deg);
